fix(style): the background of showcase in home is not align center

--- a/site/src/pages/home/sections/ShowCase/style/index.module.less
+++ b/site/src/pages/home/sections/ShowCase/style/index.module.less
@@ -7,7 +7,7 @@
     height: 100%;
     background: url('http://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/7c1cea740062ee0576b1e20b75cd5410.png~tplv-uwbnlip3yd-png.png');
     position: absolute;
-    background-position: top -185px left -1560px;
+    background-position: bottom 0 center;
   }
 
   .back-level-2 {
